--- a/Week 1/Create a Business Card app/app/src/main/res/values/strings.xml
+++ b/Week 1/Create a Business Card app/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Card Business</string>
+    <string name="name">NgocTaidev</string>
+    <string name="des">Android Developer Extraordinaire</string>
+    <string name="phone">+84 123 456 789</string>
+    <string name="share">\@ngoctaidev</string>
+    <string name="mail">tai@example.com</string>
 </resources>
