--- a/Unit3_Pathway3_Superheroes app/app/src/main/res/values/strings.xml
+++ b/Unit3_Pathway3_Superheroes app/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="description5">Effortlessly glides in to save the day</string>
     <string name="hero6">Dynamic Yasmine</string>
     <string name="description6">Ability to shift to any form and energize</string>
+    <string name="split_teams">Split into two teams</string>
+
 </resources>
